<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/demand_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufop.ruapplicationmvp.view.fragment.DemandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:minHeight="200dp"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/demand_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:minHeight="120dp">

                    <RelativeLayout
                        android:id="@+id/demand_mainbox_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/demand_imageview"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="@dimen/margin_small"
                            android:contentDescription="@string/image_descripiton_sun"
                            android:src="@mipmap/sun" />

                        <TextView
                            android:id="@+id/demand_type"
                            style="@style/Base.TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/margin_small"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_toRightOf="@+id/demand_imageview"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="30sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/demand_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/demand_textview"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/demand_mainbox_header"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/caption_demanda"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/demand_loading_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/demand_header"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caption_carregando" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/demand_content_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/demand_header"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorSelect" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/caption_normal" />

                    <TextView
                        android:id="@+id/demand_textview_normal"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:text="" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorSelect" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/caption_vegetariano" />

                    <TextView
                        android:id="@+id/demand_textview_vegetariano"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:text="" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorSelect" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/caption_total" />

                    <TextView
                        android:id="@+id/demand_textview_total"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:text="" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>